yoshimi 1.5.0 M

2017-1-20 Will
* master: pulled in corrections and upgrades from
  (no longer) brokenReset :)
* Corrected dates in this file!

2017-1-20 Will
* brokenReset: CLI stop and reset now use direct access.
* Improved CLIresolvethread flag system.
* All master resets now handled via CLIresolvethread.
* Set up proper Init function for InterChange.cpp
  Threads could fail to start if poor general init.

2017-1-19 Will
* brokenReset: removed 'UpdateConfig' from 'resetAll'
  This seems to conflict with 'UpdateMaster'.
* Clearing config tab 4 now integrated into
  'update_master_ui' at GUI level.

2017-1-18 Will
* Temporarily made key pressure do channel pressure.
* Made minor improvement to pitch wheel handling.
* Transferred master GUI controls to new method.
* Improved direct CLI to GUI Pad params apply.
* If audio thread muted incoming Midi now ignored.

2017-1-15 Will
* Updated app-data file.
* Added French translation to yoshimi.desktop.in
  from Olivier.
* More general doc updates/corrections.

2017-1-14 Will
* Corrected Midi noteon velocity zero action and made
  noteoff command more obvous!
* Implemented Midi controlled system reset.
* CC 1/11/71/74 now update Midi controls window.

2017-1-13 Will
* First experiment unifying alsa/jack/lv2 Midi input.

2017-1-12 Will
* Improved reliability of window positioning.
* Midi learn window now remembered.
* Midi learn messages now placed by relative control.
* AddSynth voice and voice list now fully in sync :)

2017-1-11 Will
* Improved GUI part label and colours sync.

2017-1-10 Will
* Improved GUI part/mixer synchronisation.
* Added error check for out of range part numbers.
* Updated docs.

2017-1-8 Will
* Transferred main GUI part controls to new method.
* Enabled GUI control of Modulation, Expression etc.
* Updated 'Controllers' tooltip.

2017-1-7 Will
* Bugfix: CLI direct access not setting audio destination.
* Bugfix: Mixer GUI returning wrong part numbers if > 16.