@@ -1,5 +1,12 @@
 yoshimi 1.5.0 M
 
+2017-1-23 Will
+* Channel switcher/Solo now ignores zero in loop mode.
+  It responds to an on/off pedal press but not release.
+* Added instrument "Smooth Organ" to "Companion" set.
+* Added error checks for attempt to access kit when not
+  in kit mode.
+
 2017-1-20 Will
 * master: pulled in corrections and upgrades from
   (no longer) brokenReset :)
